<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">foomla</string>
    <string name="loading_default_text">Loading...</string>
    <string name="loading_text">Loading %s...</string>
    <string name="exercises">Exercises</string>
    <string name="main_text"><![CDATA[<h1>Welcome to foomla!</h1>With the intelligent Training Wizard you can easily create your own professional training.]]></string>
    <string name="downloadtask_progress_title">Downloading</string>
    <string name="downloadtask_progress_desc">Loading data from server.</string>
    <string name="downloadtask_alert_title">Error</string>
    <string name="downloadtask_alert_desc">Error: No internet connection</string>
    <string name="downloadtask_alert_no_data_desc">Error: Data could not be loaded.</string>
    <string name="activity_edit_training">Create training</string>
    <string name="activity_exercise_browser">Exercise Catalog</string>
    <string name="activity_my_trainings">My Trainings</string>
    <string name="activity_exercisedetails">Exercise Detail</string>
    <string name="activity_trainingdetails">Training Details</string>
    <string name="activity_exercisefilter">Exercise Filter</string>
    <string name="activity_info">Info</string>
    <string name="activity_login">Logout</string>
    <string name="activity_news">News</string>
    <string name="activity_user">Account</string>
    <string name="edittraining_phase_arrival">1. WARM-UP</string>
    <string name="edittraining_phase_warmup">2. WARM-UP</string>
    <string name="edittraining_phase_main_one">1. MAIN</string>
    <string name="edittraining_phase_main_two">2. MAIN</string>
    <string name="edittraining_phase_scrimmage">SCRIMMAGE</string>
    <string name="edittraining_label_edit">Edit</string>
    <string name="edittraining_label_random">Random</string>
    <string name="edittraining_label_choose">Select</string>
    <string name="menu_edittraining_save">Save</string>
    <string name="menu_exercisedetail_help">Help</string>
    <string name="listitem_exercise_select">Select</string>
    <string name="exercise_image_content_desc">Exercise Image</string>
    <string name="exercisedetails_label_title">TITLE</string>
    <string name="exercisedetails_label_rate">RATE</string>
    <string name="exercisedetails_label_phase">PHASES</string>
    <string name="exercisedetails_label_focus">FOCUS</string>
    <string name="exercisedetails_label_ageclasses">AGE CLASSES</string>
    <string name="exercisedetails_label_settings">SETTING</string>
    <string name="exercisedetails_label_schedule">DESCRIPTION</string>
    <string name="exercisedetails_label_objective">GOAL</string>
    <string name="exercisedetails_label_auxiliary">AUXILIARY</string>
    <string name="exercisedetails_label_note">NOTE</string>
    <string name="exercisedetails_label_usercomments">COMMENTS</string>
    <string name="mytrainings_unable_to_delete">Training successfully deleted.</string>
    <string name="mytrainings_empty_list_info">With foomla you can create and store your own trainings. Try it right now.</string>
    <string name="mytrainings_emoty_list_title">No trainings yet</string>
    <string name="trainingdetail_title_label">Title:</string>
    <string name="trainingdetail_date_label">CREATED AT:</string>
    <string name="trainingdetail_comment_label">NOTE:</string>
    <string name="info_exercise_label">Exercises</string>
    <string name="training_saved">Training saved.</string>
    <string name="training_not_saved">Training could not be saed.</string>
    <string name="info_exercises">Exercises</string>
    <string name="info_symbols">Symbols</string>
    <string name="info_imprint">Imprint</string>
    <string name="newsdetail_image_description">Image for News</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="exercisebrowser_newexercise">New</string>
    <string name="exercisebrowser_menu_filter">Filter</string>
    <string name="delete_question">Do you really want to delete the Training?</string>
    <string name="dialog_training_title">Save Training</string>
    <string name="dialog_trainingname_label">Training name:</string>
    <string name="dialog_trainingcomment_label">Note:</string>
    <string name="dialog_trainingname_cancel">Cancel</string>
    <string name="dialog_trainingname_save">Save</string>
    <string name="dialog_commentexercise_userhint">Email (optional)</string>
    <string name="dialog_commentexercise_commenthint">Comment</string>
    <string name="dialog_commentexercise_okbutton">Send</string>
    <string name="dialog_commentexercise_cancelbutton">Cancel</string>
    <string name="choose">Choose</string>
    <string name="open">Open</string>
    
    <string name="menu_category_training">Training</string>
    <string name="menu_category_misc">Knowledge</string>
    
    <string name="menu_home">Home</string>
    <string name="menu_exercise_catalog">Exercise Catalog</string>
    <string name="menu_new_training">Create Training</string>
    <string name="menu_trainings">My Trainings</string>
    <string name="menu_info">Info</string>
    <string name="menu_news">News</string>
    <string name="menu_app_info_bottom">foomla.org - App v%s</string>
    <string name="menu_account">Account</string>
    
    <string name="drawer_open">Open Navigation</string>
    <string name="drawer_close">Close Navigation</string>
    <string name="splash_screen_app_version">foomla.org - Version %s</string>
    <string name="splash_screen_trainingswizard">Soccertraining</string>
    <string name="main_welcome_to">Welcome to foomla</string>
    <string name="main_create_training">Create Training</string>
    <string name="main_view_trainings">My Trainings</string>
    <string name="main_quickstart">Quickstart</string>
    <string name="main_latest_exercise">Latest Exercises</string>
    <string name="main_more_info">more info at foomla.org</string>
    <string name="website_url">http://foomla.org</string>

    <string name="dialog_forcelogin_title">Login required</string>
    <string name="dialog_forcelogin_message">You are required to login to use this function</string>
    <string name="dialog_forcelogin_cancel">Not yet</string>
    <string name="dialog_forcelogin_ok">Yes, log me in.</string>

    <string name="dialog_explain_shake_random_training">Shake device to generate random training</string>
    <string name="dialog_explain_shake_random_exercises">Shake device to get random exercise</string>
    <string name="menu_logout">Log Out</string>
    <string name="not_logged_in">Not logged in.</string>
    <string name="logout">Log Out</string>
    <string name="login">Log In</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pro_feature_filter"><b>Exercise filter</b></string>
    <string name="pro_feature_more_exercises"><b>All Exercises</b></string>
    <string name="pro_feature_more_trainings"><b>Trainings</b></string>
    <string name="exercise_detail_click_to_select">Click on exercise to select it.</string>
    <string name="nav_slogan">Revolutionize your Soccertraining</string>
    <string name="go_pro_text">With foomla PRO you can plan your trainings even better. Use all PRO features like exercises filters and store unlimited trainings.</string>
    <string name="go_pro_features">Exclusive PRO Features:</string>
    <string name="go_pro_features_filter">Filter exercises by training phase and age class.</string>
    <string name="go_pro_features_exercises">Access the whole exercise database with more than 250 exercises.</string>
    <string name="go_pro_features_trainings">No limitation. Store as many trainings as you wish.</string>
    <string name="main_go_pro_teaser">More features and more exercises for your training. Get foomla PRO now.</string>
    <string name="exercises_go_pro">More exercises? Get foomla PRO now.</string>
    <string name="install_pro">Install PRO</string>
    <string name="not_now">Not now</string>
    <string name="exercise_filter">Exercise filter</string>
    <string name="ok">OK</string>
    <string name="no_exercises_browser">No exercises found with current filter settings.</string>
</resources>