<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@color/darkgrey"
            android:contentDescription="@string/exercise_image_content_desc"
            android:scaleType="fitCenter" />

        <ProgressBar
            android:id="@+id/image_progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/foolightblack"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/foolightblack"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textColor="@color/foowhite"
            android:textSize="@dimen/text_extra_big" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/exercisedetails_label_rate" />

            <RatingBar
                android:id="@+id/rating"
                style="@style/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:isIndicator="false"
                android:numStars="5"
                android:stepSize="1" />
        </RelativeLayout>

        <include
            layout="@layout/horizontal_line"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                style="@style/Widget.FoomlaTheme.LabelTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercisedetails_label_phase" />

            <include layout="@layout/horizontal_line" />

            <TextView
                android:id="@+id/phase"
                style="@style/Widget.FoomlaTheme.FieldTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.FoomlaTheme.LabelTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercisedetails_label_focus" />

            <include layout="@layout/horizontal_line" />

            <TextView
                android:id="@+id/focus"
                style="@style/Widget.FoomlaTheme.FieldTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.FoomlaTheme.LabelTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercisedetails_label_ageclasses" />

            <include layout="@layout/horizontal_line" />

            <TextView
                android:id="@+id/ageclasses"
                style="@style/Widget.FoomlaTheme.FieldTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.FoomlaTheme.LabelTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercisedetails_label_settings" />

            <include layout="@layout/horizontal_line" />

            <TextView
                android:id="@+id/settings"
                style="@style/Widget.FoomlaTheme.FieldTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.FoomlaTheme.LabelTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercisedetails_label_schedule" />

            <include layout="@layout/horizontal_line" />

            <TextView
                android:id="@+id/schedule"
                style="@style/Widget.FoomlaTheme.FieldTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.FoomlaTheme.LabelTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercisedetails_label_objective" />

            <include layout="@layout/horizontal_line" />

            <TextView
                android:id="@+id/objective"
                style="@style/Widget.FoomlaTheme.FieldTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.FoomlaTheme.LabelTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercisedetails_label_auxiliary" />

            <include layout="@layout/horizontal_line" />

            <TextView
                android:id="@+id/auxiliary"
                style="@style/Widget.FoomlaTheme.FieldTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.FoomlaTheme.LabelTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercisedetails_label_note" />

            <include layout="@layout/horizontal_line" />

            <TextView
                android:id="@+id/note"
                style="@style/Widget.FoomlaTheme.FieldTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.FoomlaTheme.LabelTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercisedetails_label_usercomments"
                android:visibility="gone" />

            <include
                layout="@layout/horizontal_line"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/usercomments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>