<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/foogreen"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:theme="@style/Theme.Sherlock.NoActionBar" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/foomla_player" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/foowhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_screen_trainingswizard"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/foowhite"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/splashScreenAppVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="false"
        android:textColor="@color/foowhite"
        android:layout_margin="10dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/splash_screen_app_version" >
    </TextView>

</RelativeLayout>