<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greybg">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/go_pro_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/pink_box"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:text="foomla PRO"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_extra_big" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:tint="@color/white"
                        app2:srcCompat="@drawable/ic_control_point_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/main_go_pro_teaser"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="right">

                    <Button
                        android:id="@+id/notNowButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:text="@string/not_now"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/goProButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:text="@string/install_pro"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/white_box"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/main_quickstart"
                    android:textSize="@dimen/text_extra_big" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/newTrainingButton"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/main_create_training" />

                    <Button
                        android:id="@+id/trainingsButton"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/main_view_trainings" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/latestExerciseContainerWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/white_box_selector"
                android:clickable="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/main_latest_exercise"
                    android:textSize="@dimen/text_extra_big" />

                <ProgressBar
                    android:id="@+id/latestExerciseProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/latestExerciseContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/latestExerciseImage"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:background="@color/fooblack"
                        android:contentDescription="@string/exercise_image_content_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/latestExerciseTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="@color/fooblack"
                        android:textSize="@dimen/text_big" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/openWebsiteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/white_box_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/main_more_info"
                    android:textSize="@dimen/text_normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>