<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include layout="@layout/loading" />

        <!--
             Text view is initially invisible with height 0; if it is required those params
             are set by code.
        -->
        <LinearLayout
            android:id="@+id/empty_list_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/mytrainings_emoty_list_title"
                android:textColor="@color/fooblack"
                android:textSize="@dimen/text_extra_big"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/mytrainings_empty_list_info"
                android:textSize="@dimen/text_big"
                android:textColor="@color/foolightblack" />

            <Button
                android:id="@+id/empty_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_box_selector"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/main_create_training"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_trainings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </LinearLayout>

    <include layout="@layout/nav_drawer_list" />

</android.support.v4.widget.DrawerLayout>